--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -297,3 +297,11 @@
       archivePrefix={arXiv},
       primaryClass={math.GM}
 }
+
+@book{lambert1760photometria,
+  title={Photometria sive de mensura et gradibus luminis, colorum et umbrae},
+  author={Lambert, Johann Heinrich},
+  year={1760},
+  publisher={Sumptibus vidu{\ae} Eberhard Klett, Typis Christophori Petri Detleffsen},
+  address={Augustae Vindelicorum}
+}
