--- a/memoria/contido/conclusions.tex
+++ b/memoria/contido/conclusions.tex
@@ -9,7 +9,7 @@
 	\item Se implementó un algoritmo de transformación de coordenadas que permite convertir las poses detectadas por ArUco en matrices de transformación compatibles con sistemas de renderizado 3D, resolviendo las incompatibilidades entre diferentes convenciones de coordenadas.
 	\item Se creó una aplicación independiente de realidad aumentada que demuestra la viabilidad del sistema de tracking desarrollado, integrando capacidades de carga de modelos 3D mediante \acrshort{assimp} y renderizado con iluminación \gls{phong}.
 	\item Se estableció una arquitectura modular que permite la integración del sistema de tracking como librería independiente, facilitando su incorporación en proyectos existentes como Exposure Render.
-	\item Se ha integrado parcialmente la solución en el proyecto de \citeauthor{IglesiasGuitian2022}, sentando las bases para una integración completa que desvirtualice casos de uso médicos reales.
+	\item Se ha integrado parcialmente la solución en el proyecto de \citeauthor{IglesiasGuitian2022}, sentando las bases para una integración completa que posibilite casos de uso médicos reales. 
 \end{itemize}
 \subsection{Enriquecimiento Formativo}
 Es imprescindible destacar la vertiente formativa que presenta este trabajo dada su naturaleza como trabajo de fin de grado. El autor ha tenido la posibilidad de trabajar sobre una serie de campos de lo más variados que comprenden la imagen médica, la impresión 3D, la visión artificial, la realidad virtual y el renderizado en un motor de trazado de rayos, entre otros. Por otra parte, mencionar la exposición a un ambiente investigador en el \acrshort{citic} del que poder empaparse de la forma de trabajar y la cooperación entre iguales. También se trató de una primera puesta en práctica de los conceptos aprendidos sobre la gestión de proyectos que resultó enriquecedora.
