--- a/memoria/contido/fundamentos_teoricos.tex
+++ b/memoria/contido/fundamentos_teoricos.tex
@@ -82,7 +82,7 @@ El \emph{slicer} permite además realizar ajustes en el modelo 3D, con el fin de
 En 1994, \citeauthor{Milgram1994ATO}~\cite{Milgram1994ATO} acuñan el término de \emph{virtuality continuum}, que representa una escala que comprende desde la realidad física pura hasta la realidad virtual total, abarcando diferentes niveles de inmersión e interacción. Este \emph{continuum} describe así la gama completa de experiencias, desde la realidad física no modificada hasta entornos completamente virtuales, como se muestra en la \figurename~\ref{fig:vc}:
 \begin{itemize}
 	\item Entorno Real: consiste únicamente en objetos reales (extremo izquierdo de la figura).
-	\item Realidad Aumentada: mundo real aumentado o compuesto por elementos digitales.
+	\item Realidad Aumentada: mundo real enriquecido con elementos digitales.
 	\item Virtualidad Aumentada: mundo digital aumentado por objetos reales o físicos.
 	\item Entorno Virtual: entorno puramente virtual (extremo derecho de la figura).
 \end{itemize}
